--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - echo "Installing test gems"
+  - echo "echo "Cleaning up unused resources"
   - gem install yaml-lint
   - export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
   - echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
@@ -15,10 +15,9 @@ before_install:
   - sudo apt-get install -y dpkg
   - sudo apt-get install google-cloud-sdk
   - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.10.5/bin/linux/amd64/kubectl; chmod +x ./kubectl; sudo mv ./kubectl /usr/bin/
+  - sudo apt-get install jq
   - echo $GCP_KEY_FILE | base64 -d > ./keyfile
   - gcloud auth activate-service-account -q $(jq -r .client_email keyfile) --key-file=./keyfile --project  $(jq -r .project_id keyfile)
   - rm ./keyfile
-  - echo "Cleaning up unused resources"
   - gcloud container clusters list | grep ERROR | sed 1d $rpt | while read -r a b; do gcloud container clusters delete $a --zone $b --quiet; done
   - gcloud compute disks list | sed 1d $rpt | while read -r a b c; do gcloud compute disks delete $a --zone $b --quiet; done
-  
