Removed to cleanup only clusters with ERROR condition - now will clean up with anything sol-gke-travistest

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script:
   - echo "Cleaning up unused resources"
   
 after_script:
-  - gcloud container clusters list | grep ERROR | awk '{print $1,$2}' | while read -r a b; do gcloud container clusters delete $a --zone $b --quiet; done
+  - gcloud container clusters list | grep sol-gke-travistest | awk '{print $1,$2}' | while read -r a b; do gcloud container clusters delete $a --zone $b --quiet; done
   - gcloud compute disks list | grep travis | sed 1d $rpt | while read -r a b c; do gcloud compute disks delete $a --zone $b --quiet; done
