removed logging config curl results

--- a/solace/templates/solaceConfigMap-initialconfig.yaml
+++ b/solace/templates/solaceConfigMap-initialconfig.yaml
@@ -13,7 +13,7 @@ data:
     APP=`basename "$0"`
     echo "`date` INFO: ${APP}-Running deployment initial configuration..."
     # Create message-vpn "MyMessageVpn"
-    echo $(curl -X POST -u  admin:${1} http://localhost:8080/SEMP/v2/config/msgVpns -H "content-type: application/json" -d '{"msgVpnName":"MyMessageVpn","authenticationBasicType":"none","maxMsgSpoolUsage":100,"enabled":true}')
+    curl -X POST -u  admin:${1} http://localhost:8080/SEMP/v2/config/msgVpns -H "content-type: application/json" -d '{"msgVpnName":"MyMessageVpn","authenticationBasicType":"none","maxMsgSpoolUsage":100,"enabled":true}'
     # Create queue "MyQueue" on message-vpn "MyMessageVpn"
-    echo $(curl -X POST -u  admin:${1} http://localhost:8080/SEMP/v2/config/msgVpns/MyMessageVpn/queues -H "content-type: application/json" -d '{"queueName":"MyQueue","accessType":"non-exclusive","egressEnabled":true,"ingressEnabled":true,"permission":"delete"}')
+    curl -X POST -u  admin:${1} http://localhost:8080/SEMP/v2/config/msgVpns/MyMessageVpn/queues -H "content-type: application/json" -d '{"queueName":"MyQueue","accessType":"non-exclusive","egressEnabled":true,"ingressEnabled":true,"permission":"delete"}'
     echo "`date` INFO: ${APP}-Initial configuration complete."
