Updated solace chart with default values

--- a/solace/templates/solaceConfigMap.yaml
+++ b/solace/templates/solaceConfigMap.yaml
@@ -17,7 +17,7 @@ data:
       export service_webtransport_tlsport='60443'
       export service_semp_tlsport='60943'
       export logging_debug_output=all
-{{- if eq .Values.solace.size "dev100" }}
+{{- if eq .Values.solace.size "dev" }}
       export system_scaling_maxconnectioncount="100"
 {{- else if eq .Values.solace.size "prod100" }}
       export system_scaling_maxconnectioncount="100"
