--- a/solace/templates/podModRbac.yaml
+++ b/solace/templates/podModRbac.yaml
@@ -1,4 +1,4 @@
-# Fix rbac
+# The solace deployments requires the capability of patching the pod to indicate active state for load balancing
 {{- if semverCompare ">=1.8-0" .Capabilities.KubeVersion.GitVersion }}
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
