--- a/solace/templates/secret.yaml
+++ b/solace/templates/secret.yaml
@@ -9,4 +9,13 @@ metadata:
     app: {{ template "solace.name" . }}
 type: Opaque
 data:
-  username_admin_password: {{ b64enc "SOLOS_ADMIN_PASSWORD" }}
+{{/* Require password for HA deployment. For non-HA deployment generate password if not provided */}}
+{{- if .Values.solace.redundancy }}
+  username_admin_password: {{ required "Setting of solace.usernameAdminPassword value is required!" .Values.solace.usernameAdminPassword | b64enc | quote }}
+{{- else }}
+  {{ if .Values.solace.usernameAdminPassword }}
+  username_admin_password:  {{ .Values.solace.usernameAdminPassword | b64enc | quote }}
+  {{ else }}
+  username_admin_password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
+{{- end }}
