--- a/solace/templates/service.yaml
+++ b/solace/templates/service.yaml
@@ -8,21 +8,47 @@ metadata:
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     app: {{ template "solace.name" . }}
-
-{{- if eq .Values.cloudProvider  "aws" }}
-{{- else if eq .Values.cloudProvider "gcp" }}
- {{- if .Values.service.internal }}
-  annotations:
-    cloud.google.com/load-balancer-type: "internal"
- {{- end }} #end internal
-{{- end }} #end gcp
 spec:
-  type: {{.Values.service.type}}
-  ports:{{ range $item := .Values.service.externalPort }}
+  type: {{.Values.service.type | default "LoadBalancer"}}
+  ports:
+  - port: 22
+    targetPort: 2222
+    protocol: TCP
+    name: ssh
+  - port: 8080
+    targetPort: 
+    protocol: TCP
+    name: semp
+  - port: 55555
+    targetPort: 
+    protocol: TCP
+    name: smf
+  - port: 55003
+    targetPort: 
+    protocol: TCP
+    name: smfcompr
+  - port: 55443
+    targetPort: 
+    protocol: TCP
+    name: smftls
+  - port: 943
+    targetPort: 60943
+    protocol: TCP
+    name: semptls
+  - port: 80
+    targetPort: 60080
+    protocol: TCP
+    name: web
+  - port: 443
+    targetPort: 60443
+    protocol: TCP
+    name: webtls
+  {{- range $item := .Values.service.addExternalPort }}
   - port: {{ $item.port }}
     targetPort: {{ $item.targetport }}
     protocol: {{ $item.protocol }}
-    name: {{ $item.name }}{{end}}
+    name: {{ $item.name }}
+  {{- end}}
   selector:
     app: {{ template "solace.name" . }}
     release: {{ .Release.Name }}
