--- a/pubsubplus/Chart.yaml
+++ b/pubsubplus/Chart.yaml
@@ -1,15 +1,25 @@
 apiVersion: v1
 description: Deploy Solace PubSub+ Message Broker Singleton or HA Cluster onto a Kubernetes Cluster
-name: solace
-version: 1.1.1
+name: pubsubplus
+version: 2.0.0-SNAPSHOT
 icon: https://solace.com/wp-content/uploads/2018/05/Solace_Logo_Green_360x100-1.png
 maintainers:
-  - name: support
+  - name: Balazs Czoma
+    email: balazs.czoma@solace.com
+  - name: Ken Barr
+    email: ken.barr@solace.com
+  - name: Philippe Khalife
+    email: philippe.khalife@solace.com
+  - name: Solace Support
     email: support@solace.com
-home: http://dev.solace.com
+home: https://dev.solace.com
 sources:
    - https://github.com/SolaceProducts/solace-kubernetes-quickstart
 keywords:
 - solace
+- pubsubplus
 - pubsub+
 - message broker
+- message queue
+- event broker
+- advanced event broker
