--- a/pubsubplus/Chart.yaml
+++ b/pubsubplus/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 description: Deploy Solace PubSub+ Message Broker Singleton or HA Cluster onto a Kubernetes Cluster
 name: pubsubplus
-version: 2.0.0-SNAPSHOT
+version: 2.0.0
 icon: https://solace.com/wp-content/uploads/2018/05/Solace_Logo_Green_360x100-1.png
 maintainers:
   - name: Balazs Czoma
