--- a/pubsubplus/Chart.yaml
+++ b/pubsubplus/Chart.yaml
@@ -22,4 +22,9 @@ keywords:
 - message broker
 - message queue
 - event broker
+- event mesh
+- event portal
+- event-driven integration
+- event streaming
+- event management
 - advanced event broker
