--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -12,7 +12,8 @@ spec:
   selector:
     matchLabels:
       app: {{ template "solace.name" . }}
-      release: {{ .Release.Name }}  serviceName: {{ template "solace.fullname" . }}-discovery
+      release: {{ .Release.Name }}
+  serviceName: {{ template "solace.fullname" . }}-discovery
   replicas: {{- if .Values.solace.redundancy }} 3 {{- else }} 1 {{- end }}
 {{- if semverCompare ">=1.7-0" .Capabilities.KubeVersion.GitVersion }}  
   podManagementPolicy: Parallel
