--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -1,4 +1,4 @@
-# Create the StatefullSet, (petset), needed for redundancy
+# Create the StatefulSet needed for redundancy
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -15,11 +15,9 @@ spec:
       release: {{ .Release.Name }}
   serviceName: {{ template "solace.fullname" . }}-discovery
   replicas: {{- if .Values.solace.redundancy }} 3 {{- else }} 1 {{- end }}
-{{- if semverCompare ">=1.7-0" .Capabilities.KubeVersion.GitVersion }}  
   podManagementPolicy: Parallel
   updateStrategy: 
     type: RollingUpdate
-{{- end }}
   template:
     metadata:
       labels:
@@ -83,17 +81,9 @@ spec:
         readinessProbe:
           initialDelaySeconds: 30
           periodSeconds: 5
-{{- if semverCompare ">=1.7-0" .Capabilities.KubeVersion.GitVersion }}
           exec:
             command:
             - /mnt/disks/solace/readiness_check.sh
-            - "7"
-{{- else }}
-          exec:
-            command:
-            - /mnt/disks/solace/readiness_check.sh
-            - "6"
-{{- end }}
         securityContext:
           privileged: false
           capabilities:
@@ -201,8 +191,6 @@ spec:
             pdName: {{ .Values.storage.existingVolume }}
             fsType: ext4
       {{- end}}
-    {{- else }} #end existingVolume
-          emptyDir: {}
     {{- end }} #end !persistent
   {{ else }}
   volumeClaimTemplates:
